# circleback

./: .gitignore  DESIGN-DECISIONS.md  LICENSE  README.md  Technical-Documentation.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  smoke_test_groq.py  test_fail.txt  test_fail_metrics.txt
backend/src/circleback/: __init__.py  config.py  encryption.py  main.py  scheduler.py
backend/src/circleback/api/: auth.py  commitments.py  health.py  oauth.py  persons.py  session.py  sync.py
backend/src/circleback/db/: __init__.py  models.py
backend/src/circleback/db/migrations/: env.py
backend/src/circleback/db/migrations/versions/: 0c7cc2a37599_initial.py  9e8a5b2c9101_add_oauth_and_unrecognized_senders.py  (+1 more)
backend/src/circleback/eval/: __init__.py  harness.py  metrics.py
backend/src/circleback/eval/fixtures/: eval_fixtures.json
backend/src/circleback/ingestion/: __init__.py  gmail.py  normalizer.py  slack.py
backend/src/circleback/pipeline/: __init__.py  digest.py  extractor.py  fulfillment.py  graph.py  linker.py  llm_client.py  prefilter.py  status.py  temporal.py  text_utils.py
backend/tests/: conftest.py
backend/tests/eval/: test_eval_harness.py
backend/tests/integration/: test_gmail_sync.py  test_pipeline_e2e.py  test_slack_sync.py
backend/tests/unit/: test_api.py  test_config.py  test_digest.py  test_extractor.py  test_fulfillment.py  test_linker.py  test_migration.py  test_models.py  test_normalizer.py  test_oauth.py  test_prefilter.py  test_session.py  test_status.py  test_temporal.py  test_text_utils.py
(+24 files in other folders)
